tests/fixtures/invalid/str_bitxor_bytes.py
# Cannot bitwise XOR Str and Bytes
x: str = "hello" ^ b"hello"
